--- a/index.html
+++ b/index.html
@@ -11,15 +11,7 @@
     <script src="https://kit.fontawesome.com/a9cdbedf57.js" crossorigin="anonymous"></script>
 
     <!-- Styling CSS -->
-
-    <!-- Theme 1 -->
     <link rel="stylesheet" id="themeStylesheet" href="./assets/css/style.css" />
-
-    <!-- Theme 2 -->
-    <!-- <link rel="stylesheet" href="./assets/css/style-two.css"> -->
-
-    <!-- Theme 3 -->
-    <!-- <link rel="stylesheet" href="./assets/css/style-three.css"> -->
   </head>
 
   <body>
@@ -88,7 +80,7 @@
         </div>
 
         <div class="hero-img">
-          <img src="assets/img/Binadhi.jpg" alt="Binadhi-portfolio" width="350" />
+          <img src="assets/img/Binadhi.jpg" alt="Binadhi Portfolio" width="350" />
         </div>
       </section>
 
@@ -213,8 +205,5 @@
         <a href="https://github.com/binadhi-thimansa" target="_blank">Binadhi</a> - All Rights Reserved.
       </p>
     </footer>
-
-    <!-- JS -->
-    <script src="./assets/js/script.js"></script>
   </body>
 </html>
